neural-booker-code/programming_language/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LOCATION
    NUMBER

Grammar

Rule 0     S' -> COMMAND
Rule 1     COMMAND -> booking_command
Rule 2     COMMAND -> list_command
Rule 3     COMMAND -> payment_command
Rule 4     COMMAND -> inquiry_command
Rule 5     booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
Rule 6     booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE SYMBOL
Rule 7     booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
Rule 8     booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
Rule 9     booking_command -> ACTION_KEYWORD SERVICE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL
Rule 10    booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
Rule 11    booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
Rule 12    booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
Rule 13    list_command -> LIST_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
Rule 14    list_command -> LIST_KEYWORD SERVICE CONTEXT_KEYWORD SYMBOL
Rule 15    payment_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD SERVICE CONTEXT_KEYWORD USERNAME SYMBOL
Rule 16    payment_command -> PAYMENT_TYPE SYMBOL
Rule 17    inquiry_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
Rule 18    departure -> DEPARTURE
Rule 19    arrival -> ARRIVAL
Rule 20    action_keyword_rule -> ACTION_KEYWORD
Rule 21    resource_rule -> RESOURCE
Rule 22    service_rule -> SERVICE
Rule 23    location_marker_rule -> LOCATION_MARKER
Rule 24    context_keyword_rule -> CONTEXT_KEYWORD
Rule 25    start_date_rule -> START_DATE
Rule 26    time_rule -> TIME
Rule 27    username_rule -> USERNAME
Rule 28    symbol_rule -> SYMBOL

Terminals, with rules where they appear

ACTION_KEYWORD       : 5 6 7 8 9 10 11 12 15 17 20
ARRIVAL              : 5 6 7 8 9 10 12 13 17 19
ARTICLE_CONJUNCTION  : 8 8
CONDITIONS           : 7
CONNECTIVE_WORD      : 7
CONTEXT_KEYWORD      : 7 9 9 10 10 10 11 12 12 14 15 15 17 24
DATE                 : 12 12
DEPARTURE            : 5 6 7 8 9 10 12 13 17 18
END_DATE             : 8 10 11
LIST_KEYWORD         : 13 14
LOCATION             : 
LOCATION_MARKER      : 5 5 6 6 7 7 8 8 8 8 9 9 9 10 10 10 10 11 11 11 12 13 13 17 17 23
MONEY                : 7
NUMBER               : 
PAYMENT_TYPE         : 16
RESOURCE             : 5 6 7 8 8 9 10 11 12 13 15 17 21
SERVICE              : 9 11 14 15 22
START_DATE           : 8 9 10 11 25
SYMBOL               : 5 6 7 8 9 10 11 12 13 14 15 16 17 28
TIME                 : 9 10 10 26
USERNAME             : 9 11 15 27
error                : 

Nonterminals, with rules where they appear

COMMAND              : 0
action_keyword_rule  : 
arrival              : 
booking_command      : 1
context_keyword_rule : 
departure            : 
inquiry_command      : 4
list_command         : 2
location_marker_rule : 
payment_command      : 3
resource_rule        : 
service_rule         : 
start_date_rule      : 
symbol_rule          : 
time_rule            : 
username_rule        : 

Parsing method: LALR

state 0

    (0) S' -> . COMMAND
    (1) COMMAND -> . booking_command
    (2) COMMAND -> . list_command
    (3) COMMAND -> . payment_command
    (4) COMMAND -> . inquiry_command
    (5) booking_command -> . ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
    (6) booking_command -> . ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE SYMBOL
    (7) booking_command -> . ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
    (8) booking_command -> . ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
    (9) booking_command -> . ACTION_KEYWORD SERVICE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL
    (10) booking_command -> . ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
    (11) booking_command -> . ACTION_KEYWORD RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
    (12) booking_command -> . ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
    (13) list_command -> . LIST_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
    (14) list_command -> . LIST_KEYWORD SERVICE CONTEXT_KEYWORD SYMBOL
    (15) payment_command -> . ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD SERVICE CONTEXT_KEYWORD USERNAME SYMBOL
    (16) payment_command -> . PAYMENT_TYPE SYMBOL
    (17) inquiry_command -> . ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL

    ACTION_KEYWORD  shift and go to state 6
    LIST_KEYWORD    shift and go to state 7
    PAYMENT_TYPE    shift and go to state 8

    COMMAND                        shift and go to state 1
    booking_command                shift and go to state 2
    list_command                   shift and go to state 3
    payment_command                shift and go to state 4
    inquiry_command                shift and go to state 5

state 1

    (0) S' -> COMMAND .



state 2

    (1) COMMAND -> booking_command .

    $end            reduce using rule 1 (COMMAND -> booking_command .)


state 3

    (2) COMMAND -> list_command .

    $end            reduce using rule 2 (COMMAND -> list_command .)


state 4

    (3) COMMAND -> payment_command .

    $end            reduce using rule 3 (COMMAND -> payment_command .)


state 5

    (4) COMMAND -> inquiry_command .

    $end            reduce using rule 4 (COMMAND -> inquiry_command .)


state 6

    (5) booking_command -> ACTION_KEYWORD . RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
    (6) booking_command -> ACTION_KEYWORD . RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE SYMBOL
    (7) booking_command -> ACTION_KEYWORD . RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
    (8) booking_command -> ACTION_KEYWORD . RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
    (9) booking_command -> ACTION_KEYWORD . SERVICE RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL
    (10) booking_command -> ACTION_KEYWORD . RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
    (11) booking_command -> ACTION_KEYWORD . RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
    (12) booking_command -> ACTION_KEYWORD . RESOURCE LOCATION_MARKER DEPARTURE CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
    (15) payment_command -> ACTION_KEYWORD . RESOURCE CONTEXT_KEYWORD SERVICE CONTEXT_KEYWORD USERNAME SYMBOL
    (17) inquiry_command -> ACTION_KEYWORD . RESOURCE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL

    RESOURCE        shift and go to state 9
    SERVICE         shift and go to state 10


state 7

    (13) list_command -> LIST_KEYWORD . RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
    (14) list_command -> LIST_KEYWORD . SERVICE CONTEXT_KEYWORD SYMBOL

    RESOURCE        shift and go to state 11
    SERVICE         shift and go to state 12


state 8

    (16) payment_command -> PAYMENT_TYPE . SYMBOL

    SYMBOL          shift and go to state 13


state 9

    (5) booking_command -> ACTION_KEYWORD RESOURCE . LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
    (6) booking_command -> ACTION_KEYWORD RESOURCE . LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE SYMBOL
    (7) booking_command -> ACTION_KEYWORD RESOURCE . LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
    (8) booking_command -> ACTION_KEYWORD RESOURCE . LOCATION_MARKER ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
    (10) booking_command -> ACTION_KEYWORD RESOURCE . LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
    (11) booking_command -> ACTION_KEYWORD RESOURCE . LOCATION_MARKER SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
    (12) booking_command -> ACTION_KEYWORD RESOURCE . LOCATION_MARKER DEPARTURE CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL
    (15) payment_command -> ACTION_KEYWORD RESOURCE . CONTEXT_KEYWORD SERVICE CONTEXT_KEYWORD USERNAME SYMBOL
    (17) inquiry_command -> ACTION_KEYWORD RESOURCE . CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL

    LOCATION_MARKER shift and go to state 14
    CONTEXT_KEYWORD shift and go to state 15


state 10

    (9) booking_command -> ACTION_KEYWORD SERVICE . RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL

    RESOURCE        shift and go to state 16


state 11

    (13) list_command -> LIST_KEYWORD RESOURCE . LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL

    LOCATION_MARKER shift and go to state 17


state 12

    (14) list_command -> LIST_KEYWORD SERVICE . CONTEXT_KEYWORD SYMBOL

    CONTEXT_KEYWORD shift and go to state 18


state 13

    (16) payment_command -> PAYMENT_TYPE SYMBOL .

    $end            reduce using rule 16 (payment_command -> PAYMENT_TYPE SYMBOL .)


state 14

    (5) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER . DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL
    (6) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER . ARRIVAL LOCATION_MARKER DEPARTURE SYMBOL
    (7) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER . ARRIVAL LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
    (8) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER . ARRIVAL LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL
    (10) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER . DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
    (11) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER . SERVICE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL
    (12) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER . DEPARTURE CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL

    DEPARTURE       shift and go to state 19
    ARRIVAL         shift and go to state 20
    SERVICE         shift and go to state 21


state 15

    (15) payment_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD . SERVICE CONTEXT_KEYWORD USERNAME SYMBOL
    (17) inquiry_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD . LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL

    SERVICE         shift and go to state 22
    LOCATION_MARKER shift and go to state 23


state 16

    (9) booking_command -> ACTION_KEYWORD SERVICE RESOURCE . LOCATION_MARKER DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL

    LOCATION_MARKER shift and go to state 24


state 17

    (13) list_command -> LIST_KEYWORD RESOURCE LOCATION_MARKER . DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL

    DEPARTURE       shift and go to state 25


state 18

    (14) list_command -> LIST_KEYWORD SERVICE CONTEXT_KEYWORD . SYMBOL

    SYMBOL          shift and go to state 26


state 19

    (5) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE . LOCATION_MARKER ARRIVAL SYMBOL
    (10) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE . LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL
    (12) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE . CONTEXT_KEYWORD DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL

    LOCATION_MARKER shift and go to state 27
    CONTEXT_KEYWORD shift and go to state 28


state 20

    (6) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL . LOCATION_MARKER DEPARTURE SYMBOL
    (7) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL . LOCATION_MARKER DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
    (8) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL . LOCATION_MARKER DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL

    LOCATION_MARKER shift and go to state 29


state 21

    (11) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER SERVICE . LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL

    LOCATION_MARKER shift and go to state 30


state 22

    (15) payment_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD SERVICE . CONTEXT_KEYWORD USERNAME SYMBOL

    CONTEXT_KEYWORD shift and go to state 31


state 23

    (17) inquiry_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD LOCATION_MARKER . DEPARTURE LOCATION_MARKER ARRIVAL SYMBOL

    DEPARTURE       shift and go to state 32


state 24

    (9) booking_command -> ACTION_KEYWORD SERVICE RESOURCE LOCATION_MARKER . DEPARTURE LOCATION_MARKER ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD USERNAME SYMBOL

    DEPARTURE       shift and go to state 33


state 25

    (13) list_command -> LIST_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE . LOCATION_MARKER ARRIVAL SYMBOL

    LOCATION_MARKER shift and go to state 34


state 26

    (14) list_command -> LIST_KEYWORD SERVICE CONTEXT_KEYWORD SYMBOL .

    $end            reduce using rule 14 (list_command -> LIST_KEYWORD SERVICE CONTEXT_KEYWORD SYMBOL .)


state 27

    (5) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER . ARRIVAL SYMBOL
    (10) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE LOCATION_MARKER . ARRIVAL CONTEXT_KEYWORD START_DATE LOCATION_MARKER TIME CONTEXT_KEYWORD CONTEXT_KEYWORD END_DATE LOCATION_MARKER TIME SYMBOL

    ARRIVAL         shift and go to state 35


state 28

    (12) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER DEPARTURE CONTEXT_KEYWORD . DATE ARRIVAL CONTEXT_KEYWORD DATE SYMBOL

    DATE            shift and go to state 36


state 29

    (6) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER . DEPARTURE SYMBOL
    (7) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER . DEPARTURE CONNECTIVE_WORD CONTEXT_KEYWORD CONDITIONS MONEY SYMBOL
    (8) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER ARRIVAL LOCATION_MARKER . DEPARTURE ARTICLE_CONJUNCTION ARTICLE_CONJUNCTION RESOURCE LOCATION_MARKER START_DATE LOCATION_MARKER END_DATE SYMBOL

    DEPARTURE       shift and go to state 37


state 30

    (11) booking_command -> ACTION_KEYWORD RESOURCE LOCATION_MARKER SERVICE LOCATION_MARKER . START_DATE LOCATION_MARKER END_DATE CONTEXT_KEYWORD USERNAME SYMBOL

    START_DATE      shift and go to state 38


state 31

    (15) payment_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD SERVICE CONTEXT_KEYWORD . USERNAME SYMBOL

    USERNAME        shift and go to state 39


state 32

    (17) inquiry_command -> ACTION_KEYWORD RESOURCE CONTEXT_KEYWORD LOCATION_MARKER DEPARTURE . LOCATION_MARKER ARRIVAL SYMBOL

    LOCATION_MARKER shift and go to state 40


state 33
